
SET(THIS_EXE_NAME CcMainWin)

###################### BEGIN: GRAB SOURCE FILES ############################
FILE(GLOB THIS_EXE_SRCS RELATIVE_PATH ${CMAKE_CURRENT_SOURCE_DIR} 
									 "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" )



###################### GRAB HEADERS ###############################
FILE(GLOB THIS_EXE_HEADERS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" 
									"${CMAKE_CURRENT_SOURCE_DIR}/*.h")

									
FIND_PACKAGE(Qt4 REQUIRED)

INCLUDE_DIRECTORIES(${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/../include)

LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../bin)

SET(QT_USE_QTMAIN TRUE)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTORCC ON)

#SET(HEADERS_MOC ${CMAKE_CURRENT_SOURCE_DIR}/testImageViewer.h )

#QT4_WRAP_CPP(EXE_HEADERS_MOC ${HEADERS_MOC})
#QT4_WRAP_UI(EXE_FORMS_HEADERS ${SOURCE_FORMS})
#QT4_ADD_RESOURCES(EXE_RESOURCES_RCC ${SOURCE_RESOURCES})


ADD_EXECUTABLE(${THIS_EXE_NAME} ${THIS_EXE_HEADERS} ${THIS_EXE_SRCS} 
#								${EXE_HEADERS_MOC}
			   )

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../bin)

TARGET_LINK_LIBRARIES(${THIS_EXE_NAME} Qt4::QtCore Qt4::QtGui CcImageViewer.lib)
